--- a/coder.finance/.obsidian/workspace
+++ b/coder.finance/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "973a81449586c574",
+        "id": "332d874060d657a3",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Prototype - Features and Data Involved.md",
-            "mode": "source",
+            "file": "Prototype Draft Board.md",
+            "mode": "preview",
             "source": false
           }
         }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Prototype - Features and Data Involved.md",
+                "file": "Prototype Draft Board.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,15 +87,16 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "973a81449586c574",
+  "active": "332d874060d657a3",
   "lastOpenFiles": [
+    "Prototype Draft Board.md",
     "Prototype - Features and Data Involved.md",
+    "Architecture.md",
     "5C6BB40E-6D5D-47AB-971E-5C06C7E88C35.jpg",
+    "coder_finance_architecture_.png",
     "IMG_1977.jpg",
     "IMG_1985.jpg",
     "IMG_1986.jpg",
-    "Architecture.md",
-    "coder_finance_architecture_.png",
     "Architecture.md.md"
   ]
 }
