Add some more notes.

--- a/coder.finance/.obsidian/workspace
+++ b/coder.finance/.obsidian/workspace
@@ -89,14 +89,15 @@
   },
   "active": "332d874060d657a3",
   "lastOpenFiles": [
+    "References.md",
     "Prototype Draft Board.md",
     "Prototype - Features and Data Involved.md",
+    "Toluca.md",
     "Architecture.md",
     "5C6BB40E-6D5D-47AB-971E-5C06C7E88C35.jpg",
     "coder_finance_architecture_.png",
     "IMG_1977.jpg",
     "IMG_1985.jpg",
-    "IMG_1986.jpg",
-    "Architecture.md.md"
+    "IMG_1986.jpg"
   ]
 }
