--- a/coder.finance/.obsidian/workspace
+++ b/coder.finance/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Deployment (Ropsten) 2022-07-31.md",
-            "mode": "preview",
+            "file": "Development.md",
+            "mode": "source",
             "source": false
           }
         }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Deployment (Ropsten) 2022-07-31.md",
+                "file": "Development.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,17 +87,17 @@
     "width": 300,
     "collapsed": true
   },
- "active": "973a81449586c574",
- "lastOpenFiles": [
-    "Development.md",
-    "Architecture.md",
-    "References.md",
-    "Prototype - Features and Data Involved.md",
-    "Prototype Draft Board.md",
-    "Toluca.md",
+  "active": "335ed867b1442cbf",
+  "lastOpenFiles": [
     "technical_prototype_070722.png",
+    "Development.md",
+    "Prototype Draft Board.md",
+    "References.md",
+    "Toluca.md",
+    "Architecture.md",
+    "Deployment (Ropsten) 2022-07-31.md",
+    "Prototype - Features and Data Involved.md",
     "coder_finance_architecture_.png",
-    "IMG_1986.jpg",
-    "IMG_1985.jpg"
+    "IMG_1986.jpg"
   ]
 }
