--- a/coder.finance/.obsidian/workspace
+++ b/coder.finance/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Toluca.md",
+            "file": "Scratchpad.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Toluca.md",
+                "file": "Scratchpad.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,10 +89,10 @@
   },
   "active": "335ed867b1442cbf",
   "lastOpenFiles": [
+    "Toluca.md",
     "Development.md",
     "Architecture.md",
     "Deployment (Ropsten) 2022-07-31.md",
-    "Toluca.md",
     "References.md",
     "Prototype - Features and Data Involved.md",
     "Prototype Draft Board.md",
